--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,15 @@
     <string name="prompt_password">Lozinka</string>
     <string name="action_sign_in">Prijava</string>
     <string name="action_sign_up">Registracija</string>
+    <string name="action_play">Igraj</string>
     <string name="error_invalid_email">Morate unijeti e-mail adresu s TVZ domenom.</string>
     <string name="error_invalid_password">Lozinka je prekratka (minimalno 7 znakova).</string>
     <string name="error_incorrect_password">Lozinka je netočna</string>
     <string name="error_field_required">Polje je obavezno za ispunjavanje</string>
     <string name="action_create_account">Izradi korisnički račun</string>
     <string name="action_forgotten_password">Zaboravili ste lozinku?</string>
+    <string name="student_title">Početnik</string>
+    <string name="student_name">Pero Perić</string>
+    <string name="student_semester">1. godina</string>
+    <string name="student_course">Informatika</string>
 </resources>
