--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,76 @@
     <string name="hint_enter_report">Upišite primjedbu na pitanje...</string>
     <string name="action_accept_report">Odobri</string>
     <string name="action_reject_report">Odbaci</string>
+
+
+    <!-- Drawer-->
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="openDrawer">open_drawer</string>
+    <string name="closeDrawer">close_drawer</string>
+
+    <!-- Navigation Drawer menu labels -->
+    <string name="nav_home">Home</string>
+    <string name="nav_photos">Photos</string>
+    <string name="nav_movies">Movies</string>
+    <string name="nav_notifications">Notifications</string>
+    <string name="nav_settings">Settings</string>
+    <string name="nav_about_us">About Us</string>
+
+    <!-- Toolbar titles when navigation menu item is selected -->
+    <string-array name="nav_item_activity_titles">
+        <item>Home</item>
+        <item>Photos</item>
+        <item>Movies</item>
+        <item>Notifications</item>
+        <item>Settings</item>
+    </string-array>
+
+    <string name="activity_title_about_us">About Us</string>
+    <string name="activity_title_privacy_policy">Privacy Policy</string>
+    <string name="action_clear_all">Clear All</string>
+    <string name="action_logout">Logout</string>
+    <string name="action_mark_all_read">Mark All as Read</string>
+    <string name="privacy_policy">Privacy Policy</string>
+
+
+    <!-- Drawer -->
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+
+    <string-array name="nav_drawer_items_guest">
+        <item>Početna</item>
+        <item>Prijava</item>
+    </string-array>
+
+    <string-array name="nav_drawer_items_user">
+        <item>Početna</item>
+        <item>Profil</item>
+        <item>Postavke</item>
+        <item>Dodaj pitanje</item>
+        <item>Odjava</item>
+    </string-array>
+
+    <string-array name="nav_drawer_items_admin">
+        <item>Početna</item>
+        <item>Profil</item>
+        <item>Postavke</item>
+        <item>Dodaj pitanje</item>
+        <item>Odjava</item>
+
+        <item>Korisnici</item>
+        <item>Verifikacija pitanja</item>
+        <item>Prijave</item>
+    </string-array>
+
+    <!--
+    <array name="nav_drawer_icons">
+        <item></item>
+        <item>@drawable/profile</item>
+        <item>@drawable/edit_profile</item>
+        <item>@drawable/log_in</item>
+        <item>@drawable/log_out</item>
+    </array>
+-->
+
 </resources>
