--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,11 @@
     <string name="action_block_user">Blokiraj korisnika</string>
     <string name="action_delete_user">Izbriši korisnika</string>
     <string name="action_take_picture">Uslikaj sliku kamerom</string>
-    <string name="spinner_course">Smjer</string>
-    <string name="spinner_semester">Godina</string>
-    <string name="spinner_subject">Predmet</string>
+    <string name="spinner_course">Odaberi smjer</string>
+    <string name="spinner_semester">Odaberi semestar</string>
+    <string name="spinner_subject">Odaberi predmet</string>
+    <string name="spinner_colloquium_exam">Odaberi kolokvij/ispit</string>
+    <string name="spinner_number_questions">Odaberi broj pitanja</string>
     <string name="action_browse_picture">Odaberi sliku s telefona</string>
     <string name="error_invalid_email">Morate unijeti e-mail adresu s TVZ domenom.</string>
     <string name="error_invalid_password">Lozinka je prekratka (minimalno 7 znakova).</string>
