--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,15 +111,15 @@
         <item>Editiraj profil</item>
         <item>Statistike</item>
         <item>Dodaj pitanje</item>
-        <item>Verifikacija pitanja</item>
+    <!--<item>Verifikacija pitanja</item>-->
         <item>Prijavljena pitanja</item>
         <item>Odjava</item>
-    </string-array>
-    <string name="title_activity_tab">Quiz</string>
-    <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
+</string-array>
+<string name="title_activity_tab">Quiz</string>
+<string name="action_settings">Settings</string>
+<string name="section_format">Hello World from section: %1$d</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+<!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!--
